# orbital-mechanics

./: CMakeLists.txt  LICENSE  README.md  main.cpp
src/: body.h  main.cpp  renderer.cpp  renderer.h  simulation.h
src/core/: body.cpp  body.h  shape.cpp  shape.h  simulation.cpp  simulation.h
src/input/: app_state.h  appstate.cpp  appstate.h  draw_state.cpp  draw_state.h  menu_state.cpp  menu_state.h  shapebuilder.cpp  shapebuilder.h  simulation_state.cpp  simulation_state.h
src/physics/: collision_detector.cpp  collision_detector.h  collision_resolver.cpp  collision_resolver.h  collisiondetector.cpp  collisiondetector.h  collisionresolver.cpp  collisionresolver.h
src/rendering/: camera.cpp  camera.h  renderer.cpp  renderer.h  world_camera.cpp  world_camera.h
